--- a/task-manager/nginx/nginx.conf
+++ b/task-manager/nginx/nginx.conf
@@ -5,9 +5,13 @@ http {
         server backend:5000;
     }
 
+    upstream frontend {
+        server frontend:3000;
+    }
+
     server {
         listen 80;
-        server_name yourdomain.com;
+        server_name localhost;
 
         location /api/ {
             proxy_pass http://backend/;
@@ -15,7 +19,7 @@ http {
         }
 
         location / {
-            proxy_pass http://frontend:3000/;
+            proxy_pass http://frontend/;
             proxy_set_header Host $host;
         }
     }
