--- a/task-manager/backend/package.json
+++ b/task-manager/backend/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "task-manager-backend",
+  "name": "taskmanager-backend",
   "version": "1.0.0",
-  "description": "Backend para Task Manager con Node.js, Express y PostgreSQL",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.12.0",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "author": "Armando",
-  "license": "MIT"
+    "pg": "^8.11.0"
+  }
 }
