--- a/task-manager/frontend/Dockerfile
+++ b/task-manager/frontend/Dockerfile
@@ -1,21 +1,11 @@
-# Etapa 1: construir la app
-FROM node:20-alpine AS build
+FROM node:20
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json ./
 RUN npm install
 
 COPY . .
-RUN npm run build
 
-# Etapa 2: servir la app con nginx
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-
-# Copiamos configuración de Nginx si tienes custom
-# COPY nginx.conf /etc/nginx/nginx.conf
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+EXPOSE 3000
+CMD ["npm", "start"]
