--- a/task-manager/backend/package.json
+++ b/task-manager/backend/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "taskmanager-backend",
+  "name": "task-manager-backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "cors": "^2.8.5"
   }
 }
