--- a/task-manager/docker-compose.yml
+++ b/task-manager/docker-compose.yml
@@ -1,51 +1,34 @@
 version: '3.8'
-
 services:
-  db:
-    image: postgres:15
-    container_name: taskmanager_db
-    restart: always
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin123
-      POSTGRES_DB: taskmanager
-    ports:
-      - "5432:5432"
-    volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
-
-  backend:
+  backend1:
     build: ./backend
-    container_name: taskmanager_backend
-    restart: always
-    environment:
-      DATABASE_URL: postgres://admin:admin123@db:5432/taskmanager
-    ports:
-      - "5000:5000"
+    depends_on:
+      - db
+
+  backend2:
+    build: ./backend
     depends_on:
       - db
 
   frontend:
     build: ./frontend
-    container_name: taskmanager_frontend
-    restart: always
     ports:
       - "3000:3000"
-    depends_on:
-      - backend
+
+  db:
+    build: ./db
+    volumes:
+      - db-data:/var/lib/postgresql/data
 
   nginx:
-    image: nginx:latest
-    container_name: taskmanager_nginx
+    build: ./nginx
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - frontend
-      - backend
+      - backend1
+      - backend2
 
 volumes:
-  db_data:
+  db-data:
