--- a/task-manager/frontend/Dockerfile
+++ b/task-manager/frontend/Dockerfile
@@ -1,11 +1,8 @@
 FROM node:20
-
 WORKDIR /app
-
-COPY package.json ./
+COPY package*.json ./
 RUN npm install
-
 COPY . .
-
+RUN npm run build
 EXPOSE 3000
-CMD ["npm", "start"]
+CMD ["npx", "serve", "-s", "build"]
