--- a/task-manager/nginx/nginx.conf
+++ b/task-manager/nginx/nginx.conf
@@ -1,26 +1,20 @@
-events { worker_connections 1024; }
-
+events {}
 http {
     upstream backend {
-        server backend:5000;
-    }
-
-    upstream frontend {
-        server frontend:3000;
+        server backend1:5000;
+        server backend2:5000;
     }
 
     server {
         listen 80;
-        server_name localhost;
-
-        location /api/ {
-            proxy_pass http://backend/;
-            proxy_set_header Host $host;
-        }
+        server_name example.onrender.com;
 
         location / {
-            proxy_pass http://frontend/;
-            proxy_set_header Host $host;
+            proxy_pass http://frontend:3000;
+        }
+
+        location /tasks {
+            proxy_pass http://backend;
         }
     }
 }
