--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,20 +1,19 @@
-events {}
-http {
-    upstream backend {
-        server backend1:5000;
-        server backend2:5000;
+server {
+    listen 80;
+    server_name _;
+
+    location /api/ {
+        proxy_pass http://127.0.0.1:5000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    server {
-        listen 80;
-        server_name example.onrender.com;
-
-        location / {
-            proxy_pass http://frontend:3000;
-        }
-
-        location /tasks {
-            proxy_pass http://backend;
-        }
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri /index.html;
     }
 }
